<resources>
    <string name="app_name">SMSForwardingAssistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_push_info">最新推送信息</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="btn_permission_notice">读不到短信?去权限页面看看吧,通知类短信哦!</string>
    <string name="push_log">推送日志</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="forward_email">转发邮箱</string>
    <string name="save">保存</string>
</resources>