<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.home.HomeFragment">

    <!--第一部分-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    app:showText="true"
                    app:switchMinWidth="100dp"
                    android:theme="@style/swhichStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_goto_setting"
                    android:text="@string/btn_permission_notice"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    <!--第二部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/push_log"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/home_swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycleview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>