<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.fragment.setting.SettingFragment">
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/forward_email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/receiver"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/saveConfig"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:width="500dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>